deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: ahmedhosssam/flask-app:1722344581
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5000
          volumeMounts:
              - name: json-storage
                mountPath: /app/data
      volumes:
        - name: json-storage
          persistentVolumeClaim:
            claimName: json-pvc
